# mangusta

./: .gitignore  CMakeLists.txt  README.md  do_indent.sh
cmake/Modules/: MacroHelpers.cmake  TestInline.c
libs/: README.txt
libs/mbedtls/: CMakeLists.txt
libs/mbedtls/src/: CMakeLists.txt
src/: CMakeLists.txt  mangusta.c  mangusta_buffer.c  mangusta_buffer.h  mangusta_connection.c  mangusta_log.c  mangusta_private.h  mangusta_request.c  mangusta_request_error.h  mangusta_request_error.html  mangusta_tls.c  mangusta_utils.c
src/include/: mangusta.h
tests/: CMakeLists.txt  _test_framework.h  test_connection.c  test_context.c  test_hooks.c  test_http.c  test_http_headers.c  test_http_keepalive.c  test_http_methods.c  test_http_payload.c  test_http_request.c  test_http_urlencode.c  test_initialization.c  test_setup.c  test_suite.c  test_suite_connection.c  test_suite_context.c  test_suite_initialization.c  wiptest.c
